--- a/.travis.yml
+++ b/.travis.yml
@@ -4,20 +4,20 @@ matrix:
       # unit tests
       - env:
             - CACHE_NAME=unit_tests
-        cache:
-            timeout: 500
-            cargo: true
+        # cache:
+        #     timeout: 500
+        #     cargo: true
         install:
             - export RUSTFLAGS="-D warnings"
-            - cargo build
+            - cargo build --release
         script:
-            - cargo test --all
+            - cargo test --release --all
       # benchmark tests
       - env:
             - CACHE_NAME=bench
-        cache:
-            timeout: 500
-            cargo: true
+        # cache:
+        #     timeout: 500
+        #     cargo: true
         install:
             - export RUSTFLAGS="-g -D warnings"
         script:
@@ -25,9 +25,9 @@ matrix:
       # integration tests
       - env:
             - CACHE_NAME=integration_tests
-        cache:
-            timeout: 500
-            cargo: true
+        # cache:
+        #     timeout: 500
+        #     cargo: true
         before_install:
             # python3.6 is requried for integration tests.
             - pyenv install 3.6.2
