--- a/network/Cargo.toml
+++ b/network/Cargo.toml
@@ -32,3 +32,4 @@ lazy_static = "1.2.0"
 byte-unit = "1.1.0"
 priority-send-queue = { path = "../util/priority-send-queue" }
 metrics = { path = "../util/metrics" }
+message = { path = "../message" }
