--- a/core/Cargo.toml
+++ b/core/Cargo.toml
@@ -16,6 +16,7 @@ network = { path = "../network" }
 io = { path = "../util/io" }
 log = "0.4"
 rlp = "0.3.0"
+rlp_derive = { git = "https://github.com/Conflux-Chain/conflux-parity-deps.git" }
 lazy_static = "1.1.0"
 keylib = { git = "https://github.com/Conflux-Chain/conflux-parity-deps.git", package = "ethkey" }
 secret-store = { path = "../secret_store" }
