--- a/core/benchmark/storage/Cargo.toml
+++ b/core/benchmark/storage/Cargo.toml
@@ -25,6 +25,7 @@ parking_lot = "0.7"
 primitives = { path = "../../../primitives" }
 rlp = { version = "0.3.0", features = ["ethereum"] }
 serde_json = "1.0"
+rusage = { git = "https://github.com/ksqsf/rusage" }
 
 [patch.'https://github.com/paritytech/parity-ethereum']
 
