--- a/util/malloc_size_of/Cargo.toml
+++ b/util/malloc_size_of/Cargo.toml
@@ -1,13 +1,9 @@
 [package]
-authors = ["The Servo Project Developers"]
-description = "Internal utility to measure memory usage in WebRender."
-name = "wr_malloc_size_of"
+name = "malloc_size_of"
 version = "0.0.1"
+edition = "2018"
 license = "MIT/Apache-2.0"
 
-[lib]
-path = "lib.rs"
-
 [dependencies]
-app_units = "0.7"
-euclid = "0.19"
+cfx-types = { path = "../../cfx_types" }
+cfg-if = "0.1.9"
