--- a/.travis.yml
+++ b/.travis.yml
@@ -10,10 +10,16 @@ matrix:
         cache:
             timeout: 300
             cargo: true
+        before_install:
+          # python3.6 is requried for unit tests.
+          - pyenv install 3.6.2
+          - pyenv global 3.6.2
+          - ./dev-support/dep_pip3.sh
         install:
             - if [ -f target/Cargo.lock ]; then mv target/Cargo.lock .; fi
             - export RUSTFLAGS="-D warnings"
             - sh cargo_fmt.sh -- --check
+            - black --check .
             - cargo build --release
         script:
             - cargo test --release --all
