--- a/util/metrics/Cargo.toml
+++ b/util/metrics/Cargo.toml
@@ -9,3 +9,10 @@ parking_lot = "0.6"
 timer = "0.2.0"
 time = "0.1"
 rand = "0.5"
+
+[dev-dependencies]
+criterion = "0.2"
+
+[[bench]]
+name = "benchmark"
+harness = false
