--- a/client/cli/src/cli.yaml
+++ b/client/cli/src/cli.yaml
@@ -235,3 +235,155 @@ subcommands:
             long: hash
             required: true
             takes_value: true
+  - debug:
+      about: Debug subcommands (requires jsonrpc_local_http_port configured)
+      subcommands:
+        - txpool:
+            about: Transaction pool subcommands
+            subcommands:
+              - status:
+                  about: Get the number of transactions for different status
+                  args:
+                    - rpc-method:
+                        default_value: txpool_status
+                        hidden: true
+              - inspect-one:
+                  about: Get the detailed status of specified transaction
+                  args:
+                    - rpc-method:
+                        default_value: tx_inspect
+                        hidden: true
+                    - rpc-args:
+                        multiple: true
+                        use_delimiter: true
+                        default_value: hash
+                        hidden: true
+                    - hash:
+                        help: Transaction hash
+                        long: hash
+                        required: true
+                        takes_value: true
+              - inspect:
+                  about: List textual summary of all transactions
+                  args:
+                    - rpc-method:
+                        default_value: txpool_inspect
+                        hidden: true
+              - content:
+                  about: List exact details of all transactions
+                  args:
+                    - rpc-method:
+                        default_value: txpool_content
+                        hidden: true
+              - clear:
+                  about: Remove all transactions
+                  args:
+                    - rpc-method:
+                        default_value: clear_tx_pool
+                        hidden: true
+        - net:
+            about: Network subcommands
+            subcommands:
+              - throttling:
+                  about: Get the current throttling information
+                  args:
+                    - rpc-method:
+                        default_value: net_throttling
+                        hidden: true
+              - node:
+                  about: Get node information by ID
+                  args:
+                    - rpc-method:
+                        default_value: net_node
+                        hidden: true
+                    - rpc-args:
+                        multiple: true
+                        use_delimiter: true
+                        default_value: id
+                        hidden: true
+                    - id:
+                        help: Node ID
+                        long: id
+                        required: true
+                        takes_value: true
+              - disconnect:
+                  about: Disconnect a node
+                  args:
+                    - rpc-method:
+                        default_value: net_disconnect_node
+                        hidden: true
+                    - rpc-args:
+                        multiple: true
+                        use_delimiter: true
+                        default_value: id,operation
+                        hidden: true
+                    - id:
+                        help: Node ID
+                        long: id
+                        required: true
+                        takes_value: true
+                    - operation:
+                        help: Operation to update node database
+                        long: operation
+                        takes_value: true
+                        possible_values: [Failure, Demotion, Remove]
+              - session:
+                  about: Get active session(s)
+                  args:
+                    - rpc-method:
+                        default_value: net_sessions
+                        hidden: true
+                    - rpc-args:
+                        multiple: true
+                        use_delimiter: true
+                        default_value: id
+                        hidden: true
+                    - id:
+                        help: Node ID
+                        long: id
+                        takes_value: true
+        - sync-phase:
+            about: Get the current synchronization phase
+            args:
+              - rpc-method:
+                  default_value: current_sync_phase
+                  hidden: true
+        - consensus-graph-state:
+            about: Get the consensus graph state
+            args:
+              - rpc-method:
+                  default_value: consensus_graph_state
+                  hidden: true
+        - test:
+            about: Test subcommands (used for test purpose only)
+            subcommands:
+              - block-count:
+                  about: Get the total block count
+                  args:
+                    - rpc-method:
+                        default_value: getblockcount
+                        hidden: true
+              - goodput:
+                  about: Get the recent transaction good TPS
+                  args:
+                    - rpc-method:
+                        default_value: getgoodput
+                        hidden: true
+              - chain:
+                  about: List "ALL" blocks in topological order
+                  args:
+                    - rpc-method:
+                        default_value: cfx_getChain
+                        hidden: true
+              - stop:
+                  about: Stop the conflux program
+                  args:
+                    - rpc-method:
+                        default_value: stop
+                        hidden: true
+              - status:
+                  about: Get the current status of Conflux
+                  args:
+                    - rpc-method:
+                        default_value: getstatus
+                        hidden: true
