--- a/client/Cargo.toml
+++ b/client/Cargo.toml
@@ -50,6 +50,7 @@ transient-hashmap = "0.4"
 rand_xorshift = "0.1.1"
 itertools = "0.5"
 order-stat = "0.1"
+command = { path = "../command" }
 
 [dev-dependencies]
 criterion = "0.2"
