--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,12 @@ serde_json = "1.0"
 serde_derive = "1.0"
 parking_lot = {version="0.8"}
 panic_hook = { git = "https://github.com/Conflux-Chain/conflux-parity-deps.git" }
+app_dirs = { git = "https://github.com/paritytech/app-dirs-rs" }
+dir = { git = "https://github.com/Conflux-Chain/conflux-parity-deps.git" }
+ethstore = { path = "accounts/ethstore" }
+ethcore-accounts = { path = "accounts" }
+home = "0.5.0"
+rpassword = "4.0.1"
 io = { path = "util/io" }
 runtime = { path = "util/runtime" }
 ctrlc = { git = "https://github.com/paritytech/rust-ctrlc.git" }
@@ -38,7 +44,6 @@ keccak-hash = "0.2.0"
 rand = "0.5"
 kvdb-rocksdb = "=0.1.4"
 client = { path = "client" }
-command = { path = "command" }
 cfx-types = { path = "cfx_types" }
 threadpool = "1.7"
 futures = "0.1.29"
