--- a/client/Cargo.toml
+++ b/client/Cargo.toml
@@ -43,7 +43,7 @@ primitives = { path = "../primitives" }
 log4rs = "0.8.1"
 rlp = "0.4.0"
 keccak-hash = "0.2.0"
-rand = "=0.6"
+rand = "0.7"
 kvdb-rocksdb = "=0.1.4"
 tempdir = "0.3"
 rustc-hex= "1.0"
