--- a/core/Cargo.toml
+++ b/core/Cargo.toml
@@ -21,7 +21,9 @@ rlp_derive = { git = "https://github.com/Conflux-Chain/conflux-parity-deps.git" 
 lazy_static = "1.1.0"
 ethkey = { path = "../accounts/ethkey" }
 secret-store = { path = "../secret_store" }
-rand = "=0.6"
+rand = "0.7"
+rand_chacha="0.2.1"
+rand_xorshift="0.2.0"
 error-chain = { version = "0.12", default-features = false }
 slab = "0.4"
 kvdb = {git="https://github.com/paritytech/parity-common.git", branch="ao-upstream-rocksdb", version = "0.2"}
