--- a/db/Cargo.toml
+++ b/db/Cargo.toml
@@ -5,5 +5,5 @@ edition = "2018"
 
 [dependencies]
 log = "0.4"
-kvdb-rocksdb = "=0.1.4"
-kvdb = {git="https://github.com/paritytech/parity-common.git", branch="ao-upstream-rocksdb", version = "0.2"}
+kvdb-rocksdb = {path="./src/kvdb-rocksdb"}
+kvdb = {git="https://github.com/paritytech/parity-common.git", branch="ao-rocksdb-switch-to-upstream2"}
