--- a/db/src/kvdb-rocksdb/Cargo.toml
+++ b/db/src/kvdb-rocksdb/Cargo.toml
@@ -11,7 +11,7 @@ edition = "2018"
 elastic-array = "0.10.2"
 fs-swap = "0.2.4"
 interleaved-ordered = "0.1.1"
-kvdb = {git="https://github.com/paritytech/parity-common.git", branch="ao-rocksdb-switch-to-upstream2"}
+kvdb = "0.1.1"
 log = "0.4.8"
 num_cpus = "1.10.1"
 parking_lot = "0.9.0"
