--- a/Cargo.toml
+++ b/Cargo.toml
@@ -67,6 +67,7 @@ path = "accounts/ethkey/cli/src/main.rs"
 
 # Use workspace section to allow test all cases under root folder (cargo test --all).
 [workspace]
+members = ["core/unit_tests"]
 
 #[patch.crates-io]
 #kvdb-rocksdb = {path = "./db/src/kvdb-rocksdb"}
