--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,10 +23,10 @@ rpassword = "4.0.1"
 io = { path = "util/io" }
 runtime = { path = "util/runtime" }
 ctrlc = { git = "https://github.com/paritytech/rust-ctrlc.git" }
-jsonrpc-core = "=12.0.0"
-jsonrpc-tcp-server = "=14.0.3"
-jsonrpc-http-server = "=12.0.0"
-jsonrpc-core-client = { version = "=12.0.0", features = ["http"] }
+jsonrpc-core = "14.0.0"
+jsonrpc-tcp-server = "14.0.0"
+jsonrpc-http-server = "14.0.0"
+jsonrpc-core-client = { version = "14.0.0", features = ["http"] }
 error-chain = { version = "0.12" }
 log = "0.4"
 ethereum-types = "0.7"
