--- a/core/Cargo.toml
+++ b/core/Cargo.toml
@@ -64,6 +64,8 @@ throttling = { path = "../util/throttling" }
 serde = "1.0"
 serde_derive = "1.0"
 log4rs = "0.9.0"
+libra-canonical-serialization = { path = "src/alliance_tree_graph/bft/common/lcs" }
+consensus-types = { path = "src/alliance_tree_graph/bft/consensus/consensus-types" }
 
 [dev-dependencies]
 criterion = "0.2"
