--- a/core/src/alliance_tree_graph/bft/types/Cargo.toml
+++ b/core/src/alliance_tree_graph/bft/types/Cargo.toml
@@ -30,6 +30,8 @@ ref-cast = "1.0"
 serde = { version = "1.0.99", default-features = false }
 thiserror = "1.0"
 tiny-keccak = { version = "1.5.0", default-features = false }
+cfx-types = { path = "../../../../../cfx_types" }
+ethkey = { path = "../../../../../accounts/ethkey" }
 
 lcs = { path = "../common/lcs", version = "0.1.0", package = "libra-canonical-serialization" }
 libra-crypto = { path = "../crypto/crypto", version = "0.1.0" }
