--- a/core/src/alliance_tree_graph/bft/crypto/crypto/Cargo.toml
+++ b/core/src/alliance_tree_graph/bft/crypto/crypto/Cargo.toml
@@ -31,7 +31,10 @@ static_assertions = { version = "1.0.0", optional = true }
 thiserror = "1.0"
 threshold_crypto = "0.3"
 tiny-keccak = "1.5.0"
+parity-secp256k1 = "0.7.0"
 x25519-dalek = { git = "https://github.com/calibra/x25519-dalek.git", branch = "fiat", default-features = false }
+ethkey = { path = "../../../../../../accounts/ethkey" }
+cfx-types = { path = "../../../../../../cfx_types" }
 
 libra-crypto-derive = { path = "../crypto-derive", version = "0.1.0" }
 lcs = { path = "../../common/lcs", version = "0.1.0", package = "libra-canonical-serialization" }
