--- a/client/Cargo.toml
+++ b/client/Cargo.toml
@@ -56,7 +56,11 @@ rand_xorshift = "0.1.1"
 itertools = "0.8"
 order-stat = "0.1"
 futures = "0.1"
+rayon = "1.2.0"
 throttling = { path = "../util/throttling" }
+libra-config = { path = "../core/src/alliance_tree_graph/bft/config" }
+libradb = { path = "../core/src/alliance_tree_graph/bft/storage/libradb" }
+libra-metrics = { path = "../core/src/alliance_tree_graph/bft/common/metrics" }
 
 [dev-dependencies]
 criterion = "0.2"
