--- a/client/Cargo.toml
+++ b/client/Cargo.toml
@@ -56,6 +56,7 @@ itertools = "0.8"
 order-stat = "0.1"
 futures = "0.1"
 throttling = { path = "../util/throttling" }
+tokio = { version = "0.2", features = ["full"] }
 
 [dev-dependencies]
 criterion = "0.2"
