--- a/core/src/alliance_tree_graph/bft/config/Cargo.toml
+++ b/core/src/alliance_tree_graph/bft/config/Cargo.toml
@@ -19,6 +19,7 @@ rand = "0.6.5"
 serde = { version = "1.0.99", features = ["rc"], default-features = false }
 thiserror = "1.0"
 toml = { version = "0.5.3", default-features = false }
+keccak-hash = "0.3.0"
 
 lcs = { path = "../common/lcs", version = "0.1.0", package = "libra-canonical-serialization" }
 lazy_static = { version = "1.3.0", default-features = false }
