--- a/core/src/alliance_tree_graph/bft/storage/libradb/Cargo.toml
+++ b/core/src/alliance_tree_graph/bft/storage/libradb/Cargo.toml
@@ -26,6 +26,7 @@ strum = "0.15.0"
 strum_macros = "0.15.0"
 serde = "1.0.96"
 thiserror = "1.0"
+log = "0.4"
 
 lcs = { path = "../../common/lcs", version = "0.1.0", package = "libra-canonical-serialization" }
 libra-crypto = { path = "../../crypto/crypto", version = "0.1.0" }
