--- a/client/Cargo.toml
+++ b/client/Cargo.toml
@@ -54,9 +54,9 @@ transient-hashmap = "0.4"
 rand_xorshift = "0.1.1"
 itertools = "0.8"
 order-stat = "0.1"
-futures = "0.1"
+futures01 = "0.1"
+futures = { version = "0.3.2", features = ["compat"] }
 throttling = { path = "../util/throttling" }
-tokio = { version = "0.2", features = ["full"] }
 
 [dev-dependencies]
 criterion = "0.2"
