--- a/client/Cargo.toml
+++ b/client/Cargo.toml
@@ -57,6 +57,10 @@ order-stat = "0.1"
 futures01 = "0.1"
 futures = { version = "0.3.3", features = ["compat"] }
 throttling = { path = "../util/throttling" }
+# tokio = { version = "0.2.11", features = ["rt-threaded"] }
+tokio = "0.1.22"
+tokio-timer = "0.2.13"
+tokio-compat = "0.1.4"
 
 [dev-dependencies]
 criterion = "0.2"
