--- a/core/Cargo.toml
+++ b/core/Cargo.toml
@@ -68,6 +68,7 @@ unexpected = { git = "https://github.com/Conflux-Chain/conflux-parity-deps.git" 
 zip = "*"
 tokio = { version = "0.2.11", features = ["time"] }
 tokio-timer = "0.2.13"
+pin-project = "0.4.8"
 
 [dev-dependencies]
 criterion = "0.2"
