--- a/Cargo.toml
+++ b/Cargo.toml
@@ -82,6 +82,10 @@ path = "tools/cfx-gen-dot/main.rs"
 name = "ethkey"
 path = "accounts/ethkey/cli/src/main.rs"
 
+[[bin]]
+name = "tg_config_gen"
+path = "tools/tg_config_gen/main.rs"
+
 # Use workspace section to allow test all cases under root folder (cargo test --all).
 [workspace]
 
