--- a/run/default.toml
+++ b/run/default.toml
@@ -181,7 +181,7 @@ jsonrpc_local_http_port=12539
 #
 # min_peers_tx_propagation = 8
 
-# The time to maintain received transactions for avoid duplicated requests.
+# The time to maintain received transactions to avoid duplicated requests.
 #
 # received_tx_index_maintain_timeout_ms = 300_000
 
@@ -303,7 +303,7 @@ jsonrpc_local_http_port=12539
 
 # ------------------ Storage Parameters ----------------------
 
-# Time interval to evit old data from in-memory data cache.
+# Time interval to evict old data from in-memory data cache.
 #
 # block_cache_gc_period_ms = 5_000
 
