--- a/accounts/cfxkey/Cargo.toml
+++ b/accounts/cfxkey/Cargo.toml
@@ -1,8 +1,8 @@
 [package]
 description = "Conflux Keys Generator"
-name = "ethkey"
+name = "cfxkey"
 version = "0.3.0"
-authors = ["Parity Technologies <admin@parity.io>"]
+authors = ["Conflux Foundation"]
 
 [dependencies]
 edit-distance = "2.0"
