--- a/accounts/cfxkey/cli/Cargo.toml
+++ b/accounts/cfxkey/cli/Cargo.toml
@@ -1,13 +1,13 @@
 [package]
 description = "Parity Ethereum Keys Generator CLI"
-name = "ethkey-cli"
+name = "ctxkey-cli"
 version = "0.1.0"
 authors = ["Parity Technologies <admin@parity.io>"]
 
 [dependencies]
 docopt = "1.0"
 env_logger = "0.5"
-ethkey = { path = "../" }
+cfxkey = { path = "../" }
 panic_hook = { git = "https://github.com/Conflux-Chain/conflux-parity-deps.git" }
 parity-wordlist="1.2"
 rustc-hex = "1.0"
@@ -16,6 +16,6 @@ serde_derive = "1.0"
 threadpool = "1.7"
 
 [[bin]]
-name = "ethkey"
+name = "cfxkey"
 path = "src/main.rs"
 doc = false
