--- a/client/Cargo.toml
+++ b/client/Cargo.toml
@@ -15,7 +15,7 @@ serde_derive = "1.0"
 parking_lot = "0.10"
 panic_hook = { git = "https://github.com/Conflux-Chain/conflux-parity-deps.git" }
 io = { path = "../util/io" }
-ethkey = { path = "../accounts/ethkey" }
+cfxkey = { path = "../accounts/cfxkey" }
 ethstore = { path = "../accounts/ethstore" }
 ethcore-accounts = { path = "../accounts" }
 app_dirs = { git = "https://github.com/paritytech/app-dirs-rs" }
