--- a/client/Cargo.toml
+++ b/client/Cargo.toml
@@ -16,7 +16,7 @@ parking_lot = "0.10"
 panic_hook = { git = "https://github.com/Conflux-Chain/conflux-parity-deps.git" }
 io = { path = "../util/io" }
 cfxkey = { path = "../accounts/cfxkey" }
-ethstore = { path = "../accounts/ethstore" }
+cfxstore = { path = "../accounts/cfxstore" }
 ethcore-accounts = { path = "../accounts" }
 app_dirs = { git = "https://github.com/paritytech/app-dirs-rs" }
 dir = { git = "https://github.com/Conflux-Chain/conflux-parity-deps.git" }
