--- a/accounts/cfxstore/cli/Cargo.toml
+++ b/accounts/cfxstore/cli/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 description = "Parity Ethereum Key Management CLI"
-name = "ethstore-cli"
+name = "cfxstore-cli"
 version = "0.1.1"
 authors = ["Parity Technologies <admin@parity.io>"]
 
@@ -12,12 +12,12 @@ rustc-hex = "1.0"
 serde = "1.0"
 serde_derive = "1.0"
 parking_lot = "0.10"
-ethstore = { path = "../" }
+cfxstore = { path = "../" }
 panic_hook = { git = "https://github.com/Conflux-Chain/conflux-parity-deps.git" }
 dir = { git = "https://github.com/Conflux-Chain/conflux-parity-deps.git" }
 
 [[bin]]
-name = "ethstore"
+name = "cfxstore"
 path = "src/main.rs"
 doc = false
 
