--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,7 +17,7 @@ panic_hook = { git = "https://github.com/Conflux-Chain/conflux-parity-deps.git" 
 app_dirs = { git = "https://github.com/paritytech/app-dirs-rs" }
 dir = { git = "https://github.com/Conflux-Chain/conflux-parity-deps.git" }
 cfxstore = { path = "accounts/cfxstore" }
-ethcore-accounts = { path = "accounts" }
+cfxcore-accounts = { path = "accounts" }
 home = "0.5.0"
 rpassword = "4.0.1"
 io = { path = "util/io" }
