--- a/accounts/Cargo.toml
+++ b/accounts/Cargo.toml
@@ -1,10 +1,10 @@
 [package]
-description = "Parity Ethereum Account Management"
-homepage = "http://parity.io"
+description = "Conflux Account Management"
+homepage = "http://conflux-chain.org"
 license = "GPL-3.0"
-name = "ethcore-accounts"
+name = "cfxcore-accounts"
 version = "0.1.0"
-authors = ["Parity Technologies <admin@parity.io>"]
+authors = ["Conflux Foundation"]
 edition = "2018"
 
 [dependencies]
