--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,7 +14,7 @@ serde_json = "1.0"
 serde_derive = "1.0"
 parking_lot = "0.10"
 panic_hook = { git = "https://github.com/Conflux-Chain/conflux-parity-deps.git" }
-app_dirs = { git = "https://github.com/paritytech/app-dirs-rs" }
+app_dirs = "1.2.1"
 dir = { git = "https://github.com/Conflux-Chain/conflux-parity-deps.git" }
 cfxstore = { path = "accounts/cfxstore" }
 cfxcore-accounts = { path = "accounts" }
@@ -22,7 +22,7 @@ home = "0.5.0"
 rpassword = "4.0.1"
 io = { path = "util/io" }
 runtime = { path = "util/runtime" }
-ctrlc = { git = "https://github.com/paritytech/rust-ctrlc.git" }
+ctrlc = { git = "https://github.com/paritytech/rust-ctrlc.git", rev="b523017108bb2d571a7a69bd97bc406e63bc7a9d" }
 jsonrpc-core = "14.0.0"
 jsonrpc-tcp-server = "14.0.0"
 jsonrpc-http-server = "14.0.0"
