--- a/core/Cargo.toml
+++ b/core/Cargo.toml
@@ -12,7 +12,7 @@ num-derive = { version = "0.2.5", default-features = false }
 num-traits = { version = "0.2.8", default-features = false }
 anyhow = "1.0"
 bit-set = "0.4"
-bn = { git = "https://github.com/paritytech/bn", default-features = false }
+bn = { git = "https://github.com/paritytech/bn", default-features = false, rev="635c4cdd560bc0c8b262e6bf809dc709da8bcd7e" }
 byteorder = "1.0"
 cfx-stratum = { path = "../blockgen/stratum" }
 cfx-types = { path = "../cfx_types" }
