--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,9 +13,9 @@ serde = "1.0"
 serde_json = "1.0"
 serde_derive = "1.0"
 parking_lot = "0.10"
-panic_hook = { git = "https://github.com/Conflux-Chain/conflux-parity-deps.git" }
+panic_hook = { git = "https://github.com/Conflux-Chain/conflux-parity-deps.git", rev = "1597a9cab02343eb2322ca0ac58d39b64e3f42d1"  }
 app_dirs = "1.2.1"
-dir = { git = "https://github.com/Conflux-Chain/conflux-parity-deps.git" }
+dir = { git = "https://github.com/Conflux-Chain/conflux-parity-deps.git", rev = "1597a9cab02343eb2322ca0ac58d39b64e3f42d1"  }
 cfxstore = { path = "accounts/cfxstore" }
 cfxcore-accounts = { path = "accounts" }
 home = "0.5.0"
