--- a/run/log.yaml
+++ b/run/log.yaml
@@ -36,13 +36,13 @@ root:
 # We can set log level for crates individually
 loggers:
     network:
-        level: info
+        level: debug
     cfxcore:
         level: info
     rpc:
         level: info
-    discovery:
-        level: info
+    network::discovery:
+        level: trace
     sync:
         level: info
     blockgen:
