Improve based on Parity's implementation.
In natpmp, retry if error is `NATPMP_TRYAGAIN`.

In upnp, use the LAN local address under the discovered gateway instead
of the listened local_addr, which usually cannot be used in the upnp
protocol by the gateway.

--- a/run/log.yaml
+++ b/run/log.yaml
@@ -28,7 +28,7 @@ appenders:
         count: 50
 
 root:
-    level: info
+    level: trace
     appenders:
         - stdout
         - logfile
@@ -36,7 +36,7 @@ root:
 # We can set log level for crates individually
 loggers:
     network:
-        level: debug
+        level: trace
     cfxcore:
         level: info
     rpc:
